--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="right">
                             <h3>Ecole d'ingénieurs en informatique et numérique ESIEA  à Ivry-sur-seine</h3>
                             <ul>
-                                <li>Développement logiciel.</li>
+                                <li>Développement logiciel et web.</li>
                                 <li>Programmation d’applications web et mobile.</li>
                                 <li>Architecture cloud.</li>
                             </ul>
